--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="house603 ventures" content="get worldclass digital solutions like websites, apps and digital marketing services for your business at affordable rates">
         <link rel="stylesheet" href="style.css">
@@ -41,6 +41,7 @@
                     <img src="images/118.jpg" alt="house603-logo">
                 </p>
             </div>
+        </div>
     
             <!-- portfolio section -->
         <div>
