--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="app.js">
+        <link rel="icon" href="images/60.jpg" sizes="16x16" type="images/60.jpg">
         <meta name="house603 ventures" content="get worldclass digital solutions like websites, apps and digital marketing services for your business at affordable rates">
         <title>house603</title>
     </head>
