--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
                     <a href="#home"><img src="images/60.jpg" alt="house603-logo"></a>
                 </p>
+
+                <div class="credits">
+                    <i>crafted with</i><span style="color: red;"> &#9829; &amp; <i class="fas fa-coffee"></i></span> @<a href="https://house603.com">house603</a>
+                </div>
             </footer>
         </div>
     </body>
