font awesome kit included

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" href="images/60.jpg" sizes="16x16" type="images/60.jpg">
         <meta name="house603 ventures" content="get worldclass digital solutions like websites, apps and digital marketing services for your business at affordable rates">
         <title>house603</title>
+        <script src="https://kit.fontawesome.com/6a26aaf7cd.js" crossorigin="anonymous"></script>
     </head>
 
 <!-- main content -->
