--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="app.js">
         <link rel="icon" href="images/60.jpg" sizes="16x16" type="images/60.jpg">
-        <meta name="house603 ventures" content="get world class digital solutions such websites, apps and digital marketing services for your business at affordable rates">
-        <title>house603</title>
+        <meta name="house603 digital solutions" content="get world class, pocket friendly digital solutions such as websites, apps and digital marketing services for your business at house603">
+        <title>house603|Digital Solutions at your fingertips!</title>
         <script src="https://kit.fontawesome.com/6a26aaf7cd.js" crossorigin="anonymous"></script>
     </head>
 
